--- a/templates/faq-de.html
+++ b/templates/faq-de.html
@@ -8,6 +8,9 @@
   <body>
     <h1>$faq.de.title$</h1>
     <main class="faq">
+      <div class="intro">
+        $faq.de.intro$
+      </div>
       $for(faq.questions)$
         $if(faq.questions.de)$
           <article id="$faq.questions.de.id$">
