--- a/templates/faq-en.html
+++ b/templates/faq-en.html
@@ -8,6 +8,9 @@
   <body>
     <h1>$faq.en.title$</h1>
     <main class="faq">
+      <div class="intro">
+        $faq.de.intro$
+      </div>
       $for(faq.questions)$
         $if(faq.questions.en)$
           <article id="$faq.questions.en.id$">
