--- a/templates/index.html
+++ b/templates/index.html
@@ -23,7 +23,7 @@
         <ul>
           $for(faqs)$
             $if(faqs.en)$
-              <li><a href="$faqs.id$/de/">$faqs.de.title$</a></li>
+              <li><a href="$faqs.id$/en/">$faqs.en.title$</a></li>
             $endif$
           $endfor$
         </ul>
