--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf8" />
     <title>FAQs</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
