--- a/templates/faq-de.html
+++ b/templates/faq-de.html
@@ -55,7 +55,7 @@
             $if(faq.questions.en)$
               <a class="lang-button" href="../en/#$faq.questions.en.id$">en</a>
             $endif$
-            <h2 property="name" content="$faq.questions.de.q$"><a href="#$faq.questions.de.id$">#</a>$faq.questions.de.q$</h2>
+            <h2 property="name" content="$faq.questions.de.q$"><a href="#$faq.questions.de.id$">$faq.questions.de.q$</a></h2>
             <div property="acceptedAnswer" typeof="Answer">
               <div property="text">
                 $faq.questions.de.a$
@@ -71,9 +71,9 @@
             $if(faq.sections.questions.de)$
               <article id="$faq.sections.questions.de.id$" property="mainEntity" typeof="Question" resource="#$faq.sections.questions.de.id$">
                 $if(faq.sections.questions.en)$
-                  <a class="lang-button" href="../en/#$faq.sections.squestions.en.id$">en</a>
+                  <a class="lang-button" href="../en/#$faq.sections.questions.en.id$">en</a>
                 $endif$
-                <h3 property="name" content="$faq.sections.questions.de.q$"><a href="#$faq.questions.sections.de.id$">#</a>$faq.sections.questions.de.q$</h3>
+                <h3 property="name" content="$faq.sections.questions.de.q$"><a href="#$faq.sections.questions.de.id$">$faq.sections.questions.de.q$</a></h3>
                 <div property="acceptedAnswer" typeof="Answer">
                   <div property="text">
                     $faq.sections.questions.de.a$
@@ -91,7 +91,7 @@
                     $if(faq.sections.subsections.questions.en)$
                       <a class="lang-button" href="../en/#$faq.sections.subsections.questions.en.id$">en</a>
                     $endif$
-                    <h4 property="name" content="$faq.sections.subsections.questions.de.q$"><a href="#$faq.sections.subsections.questions.de.id$">#</a>$faq.sections.subsections.questions.de.q$</h4>
+                    <h4 property="name" content="$faq.sections.subsections.questions.de.q$"><a href="#$faq.sections.subsections.questions.de.id$">$faq.sections.subsections.questions.de.q$</a></h4>
                     <div property="acceptedAnswer" typeof="Answer">
                       <div property="text">
                         $faq.sections.subsections.questions.de.a$
@@ -105,5 +105,8 @@
         $endif$
       $endfor$
     </main>
+    <footer>
+      <a href="https://oeh.jku.at/impressum">Impressum</a>
+    </footer>
   </body>
 </html>
