--- a/templates/faq-en.html
+++ b/templates/faq-en.html
@@ -53,7 +53,7 @@
         $if(faq.questions.en)$
           <article id="$faq.questions.en.id$" property="mainEntity" typeof="Question" resource="#$faq.questions.en.id$">
             $if(faq.questions.de)$
-              <a class="lang-button" href="../de/#$faq.questions.en.id$">de</a>
+              <a class="lang-button" href="../de/#$faq.questions.de.id$">de</a>
             $endif$
             <h2 property="name" content="$faq.questions.en.q$"><a href="#$faq.questions.en.id$">$faq.questions.en.q$</a></h2>
             <div property="acceptedAnswer" typeof="Answer">
