--- a/templates/faq-de.html
+++ b/templates/faq-de.html
@@ -7,7 +7,10 @@
     <link rel="stylesheet" href="../../style.css" />
   </head>
   <body vocab="http://schema.org/">
-    <h1>$faq.de.title$</h1>
+    <header>
+      <a href="$faq.logo.href$"><img src="../../$faq.logo.src$"></a>
+      <h1>$faq.de.title$</h1>
+    </header>
     <nav>
       <ul>
         $for(faq.questions)$
