--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>FAQs</h1>
+    <header>
+      <h1>FAQs</h1>
+    </header>
     <main class="faq-list">
       <section lang="de">
         <h2>Deutsch</h2>
