--- a/templates/faq-de.html
+++ b/templates/faq-de.html
@@ -8,7 +8,10 @@
   </head>
   <body vocab="http://schema.org/">
     <header>
-      <a href="$faq.logo.href$"><img src="../../$faq.logo.src$"></a>
+      <a href="$faq.logo.href$" class="logo-link"><img src="../../$faq.logo.src$"></a>
+      $if(faq.en)$
+        <a href="../en/" class="lang-button">en</a>
+      $endif$
       <h1>$faq.de.title$</h1>
     </header>
     <nav>
