--- a/templates/faq-en.html
+++ b/templates/faq-en.html
@@ -8,7 +8,10 @@
   </head>
   <body vocab="http://schema.org/">
     <header>
-      <a href="$faq.logo.href$"><img src="../../$faq.logo.src$"></a>
+      <a href="$faq.logo.href$" class="logo-link"><img src="../../$faq.logo.src$"></a>
+      $if(faq.de)$
+        <a href="../de/" class="lang-button">de</a>
+      $endif$
       <h1>$faq.en.title$</h1>
     </header>
     <nav>
@@ -50,7 +53,7 @@
     </nav>
     <main class="faq" typeof="FAQPage">
       <div class="intro">
-        $faq.de.intro$
+        $faq.en.intro$
       </div>
       $for(faq.questions)$
         $if(faq.questions.en)$
