--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,9 @@
     <title>FAQs</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="icon" href="favicon.ico" sizes="32x32">
+    <link rel="icon" href="icon.svg" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="apple-touch-icon.png">
   </head>
   <body>
     <header>
