--- a/static/style.css
+++ b/static/style.css
@@ -89,7 +89,7 @@
   font-family: 'Material Icons Round';
   font-style: normal;
   font-weight: 400;
-  src: url('../fonts/material-icons-round-v108-latin-regular.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+  src: url('fonts/material-icons-round-v108-latin-regular.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
 
 /* color definitions */
